--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Start</a></li>
+                <li><a href="courses.html">Kurser</a></li>
+
             </ul>
         </nav>
     </header>
