--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
     
     <header>
         <h1>Kontakta oss</h1>
+        <nav>
+            <a href="index.html">Tillbaka till start</a>
+        </nav>
     </header>
 
     <main>
@@ -20,7 +23,6 @@
                 Email: support@example.com <br>
                 Telefon: 070 123 45 67 
             </address>
-            
         </section>
     </main>
 </body>
