--- a/courses.html
+++ b/courses.html
@@ -14,6 +14,9 @@
             <ul>
                 <li><a href="index.html">Start</a></li>
                 <li><a href="courses.html">Kurser</a></li>
+                <li><a href="contact.html">Kontakta oss</a></li>
+                <li><a href="profile.html">Min profil</a></li>
+
             </ul>
         </nav>
     </header>
